from dataclasses import dataclass, field

from opendevin.core.schema import ActionType

from .base import ExecutableAction, NotExecutableAction


@dataclass
class AddTaskAction(ExecutableAction):
    parent: str
    goal: str
    subtasks: list = field(default_factory=list)
    action: str = ActionType.ADD_TASK

    @property
    def message(self) -> str:
        return f'Added task: {self.goal}'


@dataclass
class ModifyTaskAction(ExecutableAction):
    id: str
    state: str
    action: str = ActionType.MODIFY_TASK

    @property
    def message(self) -> str:
        return f'Set task {self.id} to {self.state}'


@dataclass
class TaskStateChangedAction(NotExecutableAction):
    """Fake action, just to notify the client that a task state has changed."""
    task_state: str
    action: str = ActionType.CHANGE_TASK_STATE

    @property
    def message(self) -> str:
        return f'Task state changed to {self.task_state}'
